# ir-dataroom

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  biome.json  dev.sh  eslint.config.js  next.config.mjs  nixpacks.toml  package-lock.json  package.json  railway.json  renovate.json
.claude/: portal-migration-status.md  settings.json  soul.md
agents/: CLAUDE.md
agents/document-forensics/python/: __init__.py  base.py  config.py  pyproject.gpu.toml  pyproject.toml
agents/document-forensics/python/methods/: __init__.py  easyocr_extract.py
agents/document-forensics/python/methods/trufor/: config.py  config.yaml  method.py  predictor.py  preprocessing.py
agents/document-forensics/python/methods/trufor/models/: __init__.py
agents/document-forensics/python/methods/trufor/models/cmx/: __init__.py
agents/document-forensics/python/methods/trufor/models/cmx/decoders/: __init__.py
agents/document-forensics/python/methods/trufor/models/cmx/encoders/: __init__.py  dual_segformer.py
agents/document-forensics/python/methods/trufor/models/utils/: __init__.py
agents/document-forensics/python/preprocessing/: __init__.py  image.py  pipeline.py
agents/document-forensics/python/utils/: __init__.py  generic.py  image.py
auth/: Dockerfile  package.json
docs/: dependency-update-strategy.md  image-forensic-backend.md  overview.md
hasura/: .env.example  CLAUDE.md
mobile/: CLAUDE.md  app.json  metro.config.js  package.json
patches/: @pulumi%2Faws@7.21.0.patch
platform/: CLAUDE.md  components.json  package.json  tsconfig.base.json
prisma/: schema.prisma  (+3 more)
(+3266 files in other folders)
